--- a/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>643</width>
-    <height>676</height>
+    <height>681</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="2" colspan="4">
+    <item row="3" column="2">
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabShape">
        <enum>QTabWidget::Rounded</enum>
@@ -28,46 +28,8 @@
         <string>Axis Properties</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="12" column="1">
-         <widget class="QPushButton" name="fill_cols_pb">
-          <property name="text">
-           <string>Fill Columns</string>
-          </property>
-         </widget>
-        </item>
-        <item row="12" column="2">
-         <widget class="QComboBox" name="plot_type_cb">
-          <item>
-           <property name="text">
-            <string>Ext. Plot (half-ints)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Ext. Plot (ints)</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>X vs Y</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Ext. Plot (third-ints)</string>
-           </property>
-          </item>
-         </widget>
-        </item>
         <item row="0" column="1" colspan="3">
          <widget class="QTreeView" name="SE_treeView"/>
-        </item>
-        <item row="12" column="3">
-         <widget class="QPushButton" name="plot_pb">
-          <property name="text">
-           <string>Plot</string>
-          </property>
-         </widget>
         </item>
         <item row="1" column="1" colspan="3">
          <widget class="QTabWidget" name="tabWidget_3">
@@ -89,9 +51,16 @@
               </property>
               <column>
                <property name="text">
-                <string>SE-X</string>
+                <string>X-Axis</string>
                </property>
               </column>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_7">
+              <property name="text">
+               <string>Skip Rows: </string>
+              </property>
              </widget>
             </item>
             <item row="0" column="1">
@@ -101,12 +70,22 @@
               </property>
               <column>
                <property name="text">
-                <string>SE-Y</string>
+                <string>Y-Axis</string>
                </property>
               </column>
              </widget>
             </item>
-            <item row="3" column="1">
+            <item row="2" column="1">
+             <widget class="QSpinBox" name="skip_rows_sb"/>
+            </item>
+            <item row="3" column="0">
+             <widget class="QPushButton" name="fill_cols_pb">
+              <property name="text">
+               <string>Fill Columns</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
              <widget class="QComboBox" name="ax_cb">
               <item>
                <property name="text">
@@ -120,25 +99,36 @@
               </item>
              </widget>
             </item>
-            <item row="3" column="0">
-             <widget class="QCheckBox" name="zero_correct_checkb">
-              <property name="text">
-               <string>Zero Correct</string>
-              </property>
-              <property name="checked">
-               <bool>false</bool>
-              </property>
+            <item row="3" column="1">
+             <widget class="QComboBox" name="plot_type_cb">
+              <item>
+               <property name="text">
+                <string>Ext. Plot (half-ints)</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Ext. Plot (ints)</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>X vs Y</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Ext. Plot (third-ints)</string>
+               </property>
+              </item>
              </widget>
             </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_7">
+            <item row="4" column="1">
+             <widget class="QPushButton" name="plot_pb">
               <property name="text">
-               <string>Skip Rows: </string>
+               <string>Plot</string>
               </property>
              </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QSpinBox" name="skip_rows_sb"/>
             </item>
            </layout>
           </widget>
@@ -154,15 +144,15 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="1">
-             <widget class="QPushButton" name="secolorpb">
+            <item row="1" column="0">
+             <widget class="QLineEdit" name="xlabel_le">
               <property name="text">
                <string/>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="QLineEdit" name="xlabel_le">
+            <item row="3" column="1">
+             <widget class="QPushButton" name="secolorpb">
               <property name="text">
                <string/>
               </property>
@@ -181,22 +171,6 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="0">
-             <widget class="QComboBox" name="comboBox"/>
-            </item>
-            <item row="4" column="0">
-             <widget class="QLabel" name="label_18">
-              <property name="maximumSize">
-               <size>
-                <width>16777215</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>Marker Size</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="0">
              <widget class="QLabel" name="label_8">
               <property name="maximumSize">
@@ -210,90 +184,183 @@
               </property>
              </widget>
             </item>
-            <item row="5" column="0">
+            <item row="7" column="1">
+             <widget class="QCheckBox" name="error_checkbox">
+              <property name="text">
+               <string>Use Error</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="1">
+             <widget class="QLabel" name="label_18">
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Marker Size</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
              <widget class="QDoubleSpinBox" name="semarkersize">
               <property name="maximum">
                <double>9999.000000000000000</double>
               </property>
               <property name="value">
-               <double>40.000000000000000</double>
+               <double>20.000000000000000</double>
               </property>
+             </widget>
+            </item>
+            <item row="8" column="1">
+             <widget class="QComboBox" name="comboBox"/>
+            </item>
+            <item row="4" column="1">
+             <widget class="QCheckBox" name="zero_correct_checkb">
+              <property name="text">
+               <string>Zero Correct</string>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" rowspan="7">
+             <widget class="QTreeWidget" name="error_tw">
+              <column>
+               <property name="text">
+                <string>Error</string>
+               </property>
+              </column>
              </widget>
             </item>
            </layout>
           </widget>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="tab_2">
-       <attribute name="title">
-        <string>Fit Results</string>
-       </attribute>
-       <layout class="QGridLayout" name="gridLayout_5">
-        <item row="3" column="0" colspan="5">
-         <widget class="QTextBrowser" name="textBrowser">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>150</height>
-           </size>
-          </property>
-          <property name="html">
-           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt;&quot;&gt;There are a few parameter for plotting if you may need it,  including what the line should look like, the color (UNDER WORK) and if the data may require you to skip inital metadata at the beginning.  Lin. Fit function makes a popup dialog where you can pick a single line on the graph to linearly fit where the fit stats will show up below. The Lin. Fit. All will fit all the data on the graph and print in the line command the slopes of the data&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0" colspan="5">
-         <widget class="QTextEdit" name="fit_results_TE"/>
-        </item>
-        <item row="1" column="1">
-         <widget class="QCheckBox" name="selectrange_box">
-          <property name="text">
-           <string>Select Fitting Range</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QComboBox" name="axischoise_cb">
-          <item>
-           <property name="text">
-            <string>axis1</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>axis2</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>axis3</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>axis4</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-        <item row="5" column="1" colspan="2">
-         <widget class="QPushButton" name="lin_fit_pb">
-          <property name="text">
-           <string>Lin. Fit</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="3">
-         <widget class="QPushButton" name="linfitall_pb">
-          <property name="text">
-           <string>Lin. Fit. All</string>
-          </property>
+          <widget class="QWidget" name="tab_9">
+           <attribute name="title">
+            <string>Linear Fit</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_11">
+            <item row="0" column="1" colspan="2">
+             <widget class="QScrollArea" name="scrollArea_2">
+              <property name="widgetResizable">
+               <bool>true</bool>
+              </property>
+              <widget class="QWidget" name="scrollAreaWidgetContents_2">
+               <property name="geometry">
+                <rect>
+                 <x>0</x>
+                 <y>0</y>
+                 <width>575</width>
+                 <height>275</height>
+                </rect>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_12">
+                <item row="1" column="1">
+                 <widget class="QPushButton" name="linfitall_pb">
+                  <property name="text">
+                   <string>Lin. Fit. All</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QPushButton" name="lin_fit_pb">
+                  <property name="text">
+                   <string>Lin. Fit</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QCheckBox" name="selectrange_box">
+                  <property name="text">
+                   <string>Select Fitting Range</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="0">
+                 <widget class="QDoubleSpinBox" name="adosethickchange">
+                  <property name="minimum">
+                   <double>-9999.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>9999.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QLabel" name="label_20">
+                  <property name="text">
+                   <string>Negative Thickness Change Average</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="0">
+                 <widget class="QLabel" name="label_21">
+                  <property name="text">
+                   <string>A Thick Change</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QDoubleSpinBox" name="negthickchange">
+                  <property name="minimum">
+                   <double>-9999.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>9999.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="1">
+                 <widget class="QDoubleSpinBox" name="bdosethickchange">
+                  <property name="minimum">
+                   <double>-9999.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>9999.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="1">
+                 <widget class="QLabel" name="label_22">
+                  <property name="text">
+                   <string>B Thick Change</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="1">
+                 <widget class="QLabel" name="label_19">
+                  <property name="text">
+                   <string>Positive Thickness Change Average</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="1">
+                 <widget class="QDoubleSpinBox" name="posthickchange">
+                  <property name="minimum">
+                   <double>-9999.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>9999.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="0" colspan="2">
+                 <widget class="QTextEdit" name="fit_results_TE"/>
+                </item>
+               </layout>
+              </widget>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="tab_2">
+           <attribute name="title">
+            <string>Error Plotting</string>
+           </attribute>
+          </widget>
          </widget>
         </item>
        </layout>
